# USDA-CN

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  pyproject.toml  setup.py
docs/: README.md  api_reference.md  faq.md  installation.md  quickstart.md
docs/modules/: README.md  field_crops.md
examples/: basic_usage.py  scheduled_fetch.py  visualization.py
tests/: conftest.py  test_client.py
usda_cn/: __init__.py  client.py
usda_cn/api/: __init__.py  psd.py  quickstats.py
usda_cn/data/: __init__.py  base.py  corn.py  dairy.py  economics.py  field_crops.py  fruit_nuts.py  livestock.py  poultry.py  soybean.py  vegetables.py  wheat.py
usda_cn/utils/: __init__.py  constants.py  helpers.py
