[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usda-cn"
version = "0.1.0"
description = "美国农业部(USDA)数据接口中文版 - 为中国产业用户提供的农业数据获取工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "USDA-CN Team", email = "usda-cn@example.com"}
]
maintainers = [
    {name = "USDA-CN Team", email = "usda-cn@example.com"}
]
keywords = [
    "usda",
    "agriculture",
    "soybean",
    "corn",
    "wheat",
    "agricultural data",
    "nass",
    "quick stats",
    "中国",
    "农业数据",
    "大豆",
    "玉米",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Agriculture",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Natural Language :: Chinese (Simplified)",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = [
    "usda-cn[dev,viz]",
]

[project.urls]
Homepage = "https://github.com/usda-cn/usda-cn"
Documentation = "https://github.com/usda-cn/usda-cn#readme"
Repository = "https://github.com/usda-cn/usda-cn.git"
Issues = "https://github.com/usda-cn/usda-cn/issues"
Changelog = "https://github.com/usda-cn/usda-cn/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["usda_cn*"]

[tool.setuptools.package-data]
usda_cn = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true